[gd_scene load_steps=5 format=3 uid="uid://cou6ppgui40tg"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Tutorial/TutorialDisplay.gd" id="1_hw8c4"]
[ext_resource type="Texture2D" uid="uid://dev102g04v2au" path="res://Feagi-Godot-Interface/UI/Resources/tutorial_assets/t2.png" id="2_0o2b0"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextButton_Element.gd" id="3_gnven"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TitleBar/TitleBar.tscn" id="4_8lkq6"]

[node name="TutorialDisplay" type="Panel"]
anchors_preset = -1
anchor_bottom = 0.00027161
offset_top = 40.0
offset_right = 610.0
offset_bottom = 474.824
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_hw8c4")
window_spawn_location = Vector2i(900, 500)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 37.0
offset_right = 610.0
offset_bottom = 440.0

[node name="Texture" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
texture = ExtResource("2_0o2b0")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="previous_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Previous"
script = ExtResource("3_gnven")

[node name="gap" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="next_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next"
script = ExtResource("3_gnven")

[node name="TitleBar" parent="." instance=ExtResource("4_8lkq6")]
layout_mode = 0
offset_top = -40.0
offset_right = 650.0
offset_bottom = 0.0
title = "Tutorial"
